--- a/pages/admin/components/sidebar.html
+++ b/pages/admin/components/sidebar.html
@@ -120,7 +120,7 @@
      ><i class="bi bi-exclamation-triangle"></i> Inspections</a
     >
     <a href="#inspector"><i class="bi bi-person"></i> Inspectors</a>
-    <a href="#notifications"><i class="bi bi-bell"></i> Notifications</a>
+    <!-- <a href="#notifications"><i class="bi bi-bell"></i> Notifications</a> -->
     <a href="#reports"><i class="bi bi-file-earmark-text"></i> Reports</a>
     <a href="#profile"><i class="bi bi-person"></i> Profile</a>
    </div>
