--- a/pages/admin/components/sidebar.html
+++ b/pages/admin/components/sidebar.html
@@ -16,96 +16,7 @@
    href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap"
    rel="stylesheet"
   />
-  <style>
-   body {
-    font-family: "Poppins", sans-serif;
-   }
-
-   .sidebar {
-    height: 100vh;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 250px;
-    background-color: white;
-    color: #222d31;
-    padding-top: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    z-index: 1000;
-    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.05);
-   }
-
-   .sidebar a {
-    color: #222d31;
-    border-radius: 8px;
-    text-decoration: none;
-    display: block;
-    padding: 10px 20px;
-    transition: background-color 0.3s, color 0.3s;
-   }
-
-   .sidebar a:hover {
-    background-color: rgba(67, 155, 255, 0.5) !important;
-    color: #ffffff !important;
-    border-radius: 8px;
-   }
-
-   .sidebar .logo {
-    text-align: center;
-    margin-bottom: 20px;
-   }
-
-   .sidebar .logo img {
-    max-width: 150px;
-   }
-
-   .sidebar .nav-links {
-    flex-grow: 1;
-   }
-
-   .logout {
-    margin: 20px;
-    text-align: center;
-   }
-
-   .logout button {
-    background-color: transparent;
-    border: none;
-    color: #222d31;
-    font-size: 16px;
-    transition: color 0.3s;
-   }
-
-   .logout button:hover {
-    color: #dc3545;
-   }
-
-   .sidebar .active {
-    background-color: #439bff;
-    border-radius: 8px;
-    color: white;
-   }
-
-   .nav-links a {
-    color: #222d31;
-    text-decoration: none;
-    padding: 10px 20px;
-    display: block;
-    transition: background-color 0.3s;
-   }
-
-   .nav-links a:hover {
-    background-color: #439bff;
-    border-radius: 8px;
-   }
-
-   .nav-links a.active {
-    background-color: #439bff;
-    color: white;
-   }
-  </style>
+  <link rel="stylesheet" href="/css/admin/sidebar.css" />
  </head>
  <body>
   <div class="sidebar">
@@ -141,8 +52,6 @@
     if (event) {
      event.preventDefault();
     }
-
-    console.log("working"); // This will now print to the console when a link is clicked
 
     localStorage.setItem("currentPage", page);
 
